--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main class="form-signin w-100 m-auto mt-4">
   <form>
     <div class="text-center">
-        <img class="mb-4" src="images/STUDENT TRIBE LOGO.jpg" alt="" width="100" height="50">
+        <img class="mb-4" src="STUDENT TRIBE LOGO.jpg" alt="" width="100" height="50">
     </div>
    
     <h1 class="h5 mb-3 fw-normal">Please sign in</h1>
