--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
-  <title>Student Tribe Sign In</title>
+	<title>OTP Input</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+	<title>Student Tribe Sign In</title>
 </head>
-
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-  <main class="form-signin w-100 m-auto mt-4">
-  <form>
-    <div class="text-center">
-        <img class="mb-4" src="STUDENT TRIBE LOGO.jpg" alt="" width="100" height="50">
-    </div>
-   
-    <h1 class="h5 mb-3 fw-normal">Please sign in</h1>
-
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" control-id="ControlID-1">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" control-id="ControlID-2">
-      <label for="floatingPassword">Password</label>
-    </div>
-
-    <div class="form-check text-start my-3">
-      <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" control-id="ControlID-3">
-      <label class="form-check-label" for="flexCheckDefault">
-        Remember me
-      </label>
-    </div>
-    <button class="btn btn-outline-warning w-100 py-2" type="submit" control-id="ControlID-4">Sign in</button>
-  </form>
-</main>
-<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+<body>
+	<div class="container">
+		  <div class="col-lg-2, col-md-2, col-sm-12 text-center p-2 m">
+			  <img class="mt-4" src="images/STUDENT TRIBE LOGO.jpg" alt="" width="200" height="100">
+		  </div>
+		  <div class="col-lg-2, col-md-2, col-sm-12 text-center mt-4">
+			<p>Enter the OTP code sent to your email or your phone number</p>
+		</div>
+		<section id="OTP_Section" class="container-fluid text-center" style="margin-top: 5%">
+			<div class="container text-center col-lg-4 col-sm-12 col-md-10 bg-white rounded-lg shadow-lg p-3">
+				<div class="alert alert-danger" role="alert" style="display: none" id='alert_box'>
+					All fields are required!
+				</div>
+				<div id="OTP_Div" class="d-flex justify-content-center">
+					<input autofocus class="form-control otp-input text-center mx-1" onkeyup="alter_box(this.id)" maxlength="1" required type="number" id="o1" />
+					<input class="form-control otp-input text-center mx-1" style="background-color: rgba(122, 240, 255,0.1); color: gray;" required maxlength="1" type="number" id="o2" onkeyup="alter_box(this.id)" />
+					<input class="form-control otp-input text-center mx-1" style="background-color: rgba(122, 240, 255,0.1); color: gray;" required maxlength="1" type="number" id="o3" onkeyup="alter_box(this.id)" />
+					<input class="form-control otp-input text-center mx-1" style="background-color: rgba(122, 240, 255,0.1); color: gray;" required maxlength="1" type="number" id="o4" onkeyup="alter_box(this.id)" />
+					<input class="form-control otp-input text-center mx-1" style="background-color: rgba(122, 240, 255,0.1); color: gray;" required maxlength="1" type="number" id="o5" onkeyup="alter_box(this.id)" />
+					<input class="form-control otp-input text-center mx-1" style="background-color: rgba(122, 240, 255,0.1); color: gray;" required maxlength="1" type="number" id="o6" onkeyup="alter_box(this.id)" />
+				</div>
+				<div class="container text-center mt-3">
+					<button class="btn btn-outline-warning w-100 py-2" onclick="verifyOTP()">Verify</button>
+				</div>
+			</div>
+		</section>
+		
+	</div>
+	  <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	  <script src="script.js"></script>
 </body>
 </html>
+
+
+  
+
+
